Resolve duplicate id issues from html checker

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					</svg>
 				</button>
 
-                <ul class="nav-menu">
+                <ul class="nav-menu" id="header-menu">
                     <li><a href="#about-me-section">About</a></li>
                     <li><a href="#projects-section">Projects</a></li>
                     <li><a href="#footer-section">Contact</a></li>
@@ -100,15 +100,15 @@
                     </svg>
                 </div>
                 <div class="musical-note">
-                    <svg id="treble-clef" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 194.54 470.27">
+                    <svg class="treble-clef" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 194.54 470.27">
                         <title></title>
-                        <path id="treble-clef-2" data-name="treble-clef" class="cls-1" d="m191.7,269.52c-22.74-52.59-78.81-44.44-78.81-44.44l-10.67-45.19c1.63-1.63,8.74-6.37,20.3-18.22,11.56-11.85,19.41-25.78,19.41-25.78,18.37-36.44,14.52-70.52,3.41-104.37C134.22-2.33,118.56.04,118.56.04c-19.44,3.04-36.78,27.85-41.22,62.3-7.33,38.89,6.22,84.96,6.22,84.96-17.93,14.52-52,41.19-70.07,70.52-18.07,29.33-24.15,78.74,21.78,119.26,47.11,38.37,99.56,19.56,99.56,19.56,0,0,6.81,27.41,9.93,39.41,3.11,12,2.81,20.74,2.81,20.74-1.78,37.48-30.22,42.44-49.22,43-19,.56-24.22-11.56-24.22-11.56,17.11,3.22,24.44-6.44,24.44-6.44,16.44-17.33,4.56-48.44-26.11-46.56-30.67,1.89-29.67,30.44-29.67,30.44.56,37.67,44.22,45.33,58,44.56,13.78-.78,27.33-.33,44.89-17.56s10-49.56,10-49.56l-11.67-49.89c68-25.63,47.7-83.7,47.7-83.7ZM93.33,72.18c10.07-27.41,25.19-31.26,32.44-31.26s16.3,4.89,16.44,15.85c.15,10.96.3,20.89-14.67,43.41,0,0-7.7,14.7-34.96,38.37,0,0-9.33-38.96.74-66.37Zm-14.96,275.56c-58.7-18.74-61.04-55.56-49.04-88.44,10.22-32.59,65.44-72.96,65.44-72.96l10.33,41c-9.44.89-46.89,20.11-44.22,56.11,2.67,36,34.07,45.19,36.89,45.63s8.3.44,7.85-3.26c-.44-3.7-4.89-5.04-4.89-5.04-15.56-2.52-28.15-24.89-17.33-41.78,10.81-16.89,29.19-19.41,29.19-19.41l20.15,88.89c-27.56,7.85-54.37-.74-54.37-.74Zm62.81-2.81l-20.74-86.81c26.22-1.78,50.22,14.96,51.11,44,.15,29.93-30.37,42.81-30.37,42.81Z"/>
+                        <path data-name="treble-clef" class="treble-clef-2 cls-1" d="m191.7,269.52c-22.74-52.59-78.81-44.44-78.81-44.44l-10.67-45.19c1.63-1.63,8.74-6.37,20.3-18.22,11.56-11.85,19.41-25.78,19.41-25.78,18.37-36.44,14.52-70.52,3.41-104.37C134.22-2.33,118.56.04,118.56.04c-19.44,3.04-36.78,27.85-41.22,62.3-7.33,38.89,6.22,84.96,6.22,84.96-17.93,14.52-52,41.19-70.07,70.52-18.07,29.33-24.15,78.74,21.78,119.26,47.11,38.37,99.56,19.56,99.56,19.56,0,0,6.81,27.41,9.93,39.41,3.11,12,2.81,20.74,2.81,20.74-1.78,37.48-30.22,42.44-49.22,43-19,.56-24.22-11.56-24.22-11.56,17.11,3.22,24.44-6.44,24.44-6.44,16.44-17.33,4.56-48.44-26.11-46.56-30.67,1.89-29.67,30.44-29.67,30.44.56,37.67,44.22,45.33,58,44.56,13.78-.78,27.33-.33,44.89-17.56s10-49.56,10-49.56l-11.67-49.89c68-25.63,47.7-83.7,47.7-83.7ZM93.33,72.18c10.07-27.41,25.19-31.26,32.44-31.26s16.3,4.89,16.44,15.85c.15,10.96.3,20.89-14.67,43.41,0,0-7.7,14.7-34.96,38.37,0,0-9.33-38.96.74-66.37Zm-14.96,275.56c-58.7-18.74-61.04-55.56-49.04-88.44,10.22-32.59,65.44-72.96,65.44-72.96l10.33,41c-9.44.89-46.89,20.11-44.22,56.11,2.67,36,34.07,45.19,36.89,45.63s8.3.44,7.85-3.26c-.44-3.7-4.89-5.04-4.89-5.04-15.56-2.52-28.15-24.89-17.33-41.78,10.81-16.89,29.19-19.41,29.19-19.41l20.15,88.89c-27.56,7.85-54.37-.74-54.37-.74Zm62.81-2.81l-20.74-86.81c26.22-1.78,50.22,14.96,51.11,44,.15,29.93-30.37,42.81-30.37,42.81Z"/>
                     </svg>
                 </div>
                 <div class="musical-note">
-                    <svg id="bass-clef" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 399.78 461.27">
+                    <svg class="bass-clef" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 399.78 461.27">
                         <title></title>
-                        <g id="bass-clef-2" data-name="bass-clef">
+                        <g class="bass-clef-2" data-name="bass-clef">
                         <path class="cls-1" d="m30.45,97.12s11.74-45.74,58-65.22,105.89.56,128.44,63.28c0,0,18.41,49.09-1.52,118.28s-80.81,138.37-112.3,167.93-66.22,55.63-99.04,68.52c0,0-8.04,5.33,7.63,10.44,0,0,20.67,8.44,86.78-25.67s121.89-95.96,142.78-124.44,47.56-73.22,51.33-111.22,1.19-73.85-5.85-96.59-20.37-59.04-71.26-86.22S86.78-4.32,42.34,39.01c0,0-44.89,35.78-42.22,99.56s55.78,59.78,55.78,59.78c0,0,48.44.22,52.22-53.33-2.44-53.78-55.11-61.11-77.67-47.89Z"/>
                         <circle class="cls-1" cx="371" cy="75.79" r="28.78"/>
                         <circle class="cls-1" cx="371" cy="213.68" r="28.78"/>
@@ -116,15 +116,15 @@
                     </svg>
                 </div>
                 <div class="musical-note">
-                    <svg id="treble-clef" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 194.54 470.27">
+                    <svg class="treble-clef" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 194.54 470.27">
                         <title></title>
-                        <path id="treble-clef-2" data-name="treble-clef" class="cls-1" d="m191.7,269.52c-22.74-52.59-78.81-44.44-78.81-44.44l-10.67-45.19c1.63-1.63,8.74-6.37,20.3-18.22,11.56-11.85,19.41-25.78,19.41-25.78,18.37-36.44,14.52-70.52,3.41-104.37C134.22-2.33,118.56.04,118.56.04c-19.44,3.04-36.78,27.85-41.22,62.3-7.33,38.89,6.22,84.96,6.22,84.96-17.93,14.52-52,41.19-70.07,70.52-18.07,29.33-24.15,78.74,21.78,119.26,47.11,38.37,99.56,19.56,99.56,19.56,0,0,6.81,27.41,9.93,39.41,3.11,12,2.81,20.74,2.81,20.74-1.78,37.48-30.22,42.44-49.22,43-19,.56-24.22-11.56-24.22-11.56,17.11,3.22,24.44-6.44,24.44-6.44,16.44-17.33,4.56-48.44-26.11-46.56-30.67,1.89-29.67,30.44-29.67,30.44.56,37.67,44.22,45.33,58,44.56,13.78-.78,27.33-.33,44.89-17.56s10-49.56,10-49.56l-11.67-49.89c68-25.63,47.7-83.7,47.7-83.7ZM93.33,72.18c10.07-27.41,25.19-31.26,32.44-31.26s16.3,4.89,16.44,15.85c.15,10.96.3,20.89-14.67,43.41,0,0-7.7,14.7-34.96,38.37,0,0-9.33-38.96.74-66.37Zm-14.96,275.56c-58.7-18.74-61.04-55.56-49.04-88.44,10.22-32.59,65.44-72.96,65.44-72.96l10.33,41c-9.44.89-46.89,20.11-44.22,56.11,2.67,36,34.07,45.19,36.89,45.63s8.3.44,7.85-3.26c-.44-3.7-4.89-5.04-4.89-5.04-15.56-2.52-28.15-24.89-17.33-41.78,10.81-16.89,29.19-19.41,29.19-19.41l20.15,88.89c-27.56,7.85-54.37-.74-54.37-.74Zm62.81-2.81l-20.74-86.81c26.22-1.78,50.22,14.96,51.11,44,.15,29.93-30.37,42.81-30.37,42.81Z"/>
+                        <path data-name="treble-clef" class="treble-clef-2 cls-1" d="m191.7,269.52c-22.74-52.59-78.81-44.44-78.81-44.44l-10.67-45.19c1.63-1.63,8.74-6.37,20.3-18.22,11.56-11.85,19.41-25.78,19.41-25.78,18.37-36.44,14.52-70.52,3.41-104.37C134.22-2.33,118.56.04,118.56.04c-19.44,3.04-36.78,27.85-41.22,62.3-7.33,38.89,6.22,84.96,6.22,84.96-17.93,14.52-52,41.19-70.07,70.52-18.07,29.33-24.15,78.74,21.78,119.26,47.11,38.37,99.56,19.56,99.56,19.56,0,0,6.81,27.41,9.93,39.41,3.11,12,2.81,20.74,2.81,20.74-1.78,37.48-30.22,42.44-49.22,43-19,.56-24.22-11.56-24.22-11.56,17.11,3.22,24.44-6.44,24.44-6.44,16.44-17.33,4.56-48.44-26.11-46.56-30.67,1.89-29.67,30.44-29.67,30.44.56,37.67,44.22,45.33,58,44.56,13.78-.78,27.33-.33,44.89-17.56s10-49.56,10-49.56l-11.67-49.89c68-25.63,47.7-83.7,47.7-83.7ZM93.33,72.18c10.07-27.41,25.19-31.26,32.44-31.26s16.3,4.89,16.44,15.85c.15,10.96.3,20.89-14.67,43.41,0,0-7.7,14.7-34.96,38.37,0,0-9.33-38.96.74-66.37Zm-14.96,275.56c-58.7-18.74-61.04-55.56-49.04-88.44,10.22-32.59,65.44-72.96,65.44-72.96l10.33,41c-9.44.89-46.89,20.11-44.22,56.11,2.67,36,34.07,45.19,36.89,45.63s8.3.44,7.85-3.26c-.44-3.7-4.89-5.04-4.89-5.04-15.56-2.52-28.15-24.89-17.33-41.78,10.81-16.89,29.19-19.41,29.19-19.41l20.15,88.89c-27.56,7.85-54.37-.74-54.37-.74Zm62.81-2.81l-20.74-86.81c26.22-1.78,50.22,14.96,51.11,44,.15,29.93-30.37,42.81-30.37,42.81Z"/>
                     </svg>
                 </div>
                 <div class="musical-note">
-                    <svg id="bass-clef" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 399.78 461.27">
+                    <svg class="bass-clef" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 399.78 461.27">
                         <title></title>
-                        <g id="bass-clef-2" data-name="bass-clef">
+                        <g class="bass-clef-2" data-name="bass-clef">
                         <path class="cls-1" d="m30.45,97.12s11.74-45.74,58-65.22,105.89.56,128.44,63.28c0,0,18.41,49.09-1.52,118.28s-80.81,138.37-112.3,167.93-66.22,55.63-99.04,68.52c0,0-8.04,5.33,7.63,10.44,0,0,20.67,8.44,86.78-25.67s121.89-95.96,142.78-124.44,47.56-73.22,51.33-111.22,1.19-73.85-5.85-96.59-20.37-59.04-71.26-86.22S86.78-4.32,42.34,39.01c0,0-44.89,35.78-42.22,99.56s55.78,59.78,55.78,59.78c0,0,48.44.22,52.22-53.33-2.44-53.78-55.11-61.11-77.67-47.89Z"/>
                         <circle class="cls-1" cx="371" cy="75.79" r="28.78"/>
                         <circle class="cls-1" cx="371" cy="213.68" r="28.78"/>
@@ -269,10 +269,10 @@
 
             <div class="social-media-container">
                 <a href="https://github.com/hojinchang" target="_blank" rel="noopener noreferrer">
-                    <i class="fa fa-github" aria-label="Link to Github"></i>
+                    <i class="fa fa-github"></i>
                 </a>
                 <a href="https://www.linkedin.com/in/hojin-chang-316084157/" target="_blank" rel="noopener noreferrer">
-                    <i class="fa fa-linkedin" aria-label="Link to Linkedin"></i>
+                    <i class="fa fa-linkedin"></i>
                 </a>
             </div>
             <p class="copyright">&copy; 2023 <span class="footer-name">Hojin Chang</span></p>
