--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:image" content="images/logo_black_background.svg">
         <title>hojin</title>
         <!-- Inter, Montserrat, and Roboto Font Import -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
