Change favicon to have black border

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter&family=Montserrat&display=swap" rel="stylesheet">
         <!-- Favicon import -->
-        <link rel="icon" type="image/x-icon" href="images/logo.svg">
+        <link rel="icon" type="image/x-icon" href="images/logo_black_background.svg">
         <!-- Google Icons import -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Symbols+Outlined">
         <!-- Font Awesome import -->
