Fix intro banner positioning

--- a/index.html
+++ b/index.html
@@ -47,10 +47,13 @@
                 <p>Hello!</p>
                 <p>My name is <span class="my-name">Hojin</span></p>
                 <p>I'm a Web Developer</p>
+            </section>
+
+            <!-- <div class="nav-down-container"> -->
                 <a class="nav-down-btn" href="#about-me-section">
                     <span id="nav-down" class="material-symbols-outlined">expand_more</span>
                 </a>
-            </section>
+            <!-- </div> -->
 
             <div id="musical-notes">
                 <div class="musical-note">
