--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Hojin Chang</title>
         <!-- Favicon import -->
-        <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
-        <link rel="manifest" href="images/favicon/site.webmanifest">
-        <meta name="msapplication-TileColor" content="#da532c">
-        <meta name="theme-color" content="#ffffff">
+        <link rel="icon" href="images/favicon/favicon.ico" sizes="any"> 
+        <link rel="icon" href="images/favicon/favicon.svg" type="image/svg+xml">
+        <link rel="apple-touch-icon" href="images/favicon/apple-touch-icon.png"/>
+        <link rel="manifest" href="images/favicon/site.webmanifest" />
         <!-- Inter, Montserrat, and Roboto Font Import -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
