--- a/project-pages/country-website/discover.html
+++ b/project-pages/country-website/discover.html
@@ -5,21 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Discover - Argentina</title>
         <!-- Favicon links -->
-        <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
-        <link rel="icon" type="image/png" sizes="512x512" href="images/favicon/android-chrome-512x512.png">
-        <link rel="icon" type="image/png" sizes="192x192" href="images/favicon/android-chrome-192x192.png">
-        <meta name="msapplication-TileColor" content="#da532c">
-        <meta name="msapplication-TileImage" content="images/favicon/mstile-310x310.png">
-        <meta name="msapplication-TileImage" content="images/favicon/mstile-310x150.png">
-        <meta name="msapplication-TileImage" content="images/favicon/mstile-150x150.png">
-        <meta name="msapplication-TileImage" content="images/favicon/mstile-144x144.png">
-        <meta name="msapplication-TileImage" content="images/favicon/mstile-70x70.png">
-        <meta name="msapplication-config" content="images/favicon/browserconfig.xml">
-        <link rel="manifest" href="images/favicon/site.webmanifest">
-        <link rel="mask-icon" href="images/favicon/safari-pinned-tab.svg" color="#5bbad5">
-        <meta name="theme-color" content="#ffffff">
+        <link rel="icon" href="images/favicon/favicon.ico" sizes="any"> 
+        <link rel="icon" href="images/favicon/favicon.svg" type="image/svg+xml">
+        <link rel="apple-touch-icon" href="images/favicon/apple-touch-icon.png"/>
+        <link rel="manifest" href="images/favicon/site.webmanifest" />
         <!-- Inter and Nanum Myeongjo Font Import -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
