Add SEO meta tag

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Hojin Chang</title>
+        <!-- SEO -->
+        <meta name="description" content="Explore my portfolio—a showcase of my passion and expertise in web development, design, and creative solutions tailored to inspire and innovate.">
         <!-- Favicon import -->
         <link rel="icon" href="images/favicon/favicon.ico" sizes="any"> 
         <link rel="icon" href="images/favicon/favicon.svg" type="image/svg+xml">
