Update country website description

--- a/index.html
+++ b/index.html
@@ -167,15 +167,17 @@
                 </div>
                 <div class="html-css-projects projects-container">
                     <article class="project-article">
-                        <a href="project-pages/country-website/index.html" target="_blank">
+                        <a href="./country-website/index.html" target="_blank">
                             <h2>Country Website</h2>
                             <img src="images/logo.svg" alt="Project placeholder image">
                             <p>HTML/CSS</p>
                             <div class="project-overlay completed-project-overlay">
                                 <h3>Explore Argentina</h3>
-                                <p>Explore Argentina's vibrant essence through my dedicated website featuring three distinct sections: 
-                                    Discover showcases iconic landmarks to explore, Food celebrates the country's culinary delights, 
-                                    while Culture offers a glimpse into the rich tapestry of Argentine traditions and customs.
+                                <p>Embark on an immersive exploration of Argentina through our 
+                                    website's Discover, Food and Culture sections. Unveil iconic 
+                                    landmarks in Discover, savor the essence of Argentine cuisine 
+                                    in Food, and delve into the nation's rich traditions and arts 
+                                    in Culture.
                                 </p>
                             </div>
                         </a>
